force-app/main/default/objects/BMCServiceDesk__Action__c/BMCServiceDesk__Action__c.object-meta.xml
<CustomObject>
    <description>Actions are pre-defined activities associated with an Incident, Task or BroadCast that record the details of the support process</description>
    <label>Action</label>
    <nameField>
        <label>Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>