force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Abbreviation__c</fullName>
    <inlineHelpText>Use this field to enter a short label that you want to assign to the action. When you create charts or reports, you can represent an action record by displaying this field in the chart or report.</inlineHelpText>
    <label>Abbreviation</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>