force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__appliesToBroadcasts__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToBroadcasts__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this field if you want to designate the current action as one of the default actions that can be accessed and assigned when you add a broadcast supporting information record to a broadcast.</inlineHelpText>
    <label>Applies to Broadcasts</label>
    <type>Checkbox</type>
</CustomField>