force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__appliesToChange__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToChange__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this field if you want to designate the current action as one of the default actions that can be  accessed and assigned when you add a Change Request.</inlineHelpText>
    <label>Applies to Change</label>
    <type>Checkbox</type>
</CustomField>