force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__appliesToIncident__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToIncident__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this field if you want to designate the current action as one of the default actions that can be accessed and assigned when you add an incident/service request supporting information record to an incident/service request.</inlineHelpText>
    <label>Applies to Incident</label>
    <type>Checkbox</type>
</CustomField>