force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__AppliesToPreventiveMaintenance__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AppliesToPreventiveMaintenance__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Applies to Preventive Maintenance</label>
    <type>Checkbox</type>
</CustomField>