force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__appliesToPurchasing__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToPurchasing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Applies to Purchasing</label>
    <type>Checkbox</type>
</CustomField>