force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__appliesToRelease__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToRelease__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Applies to Release</label>
    <type>Checkbox</type>
</CustomField>