force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__appliesToTask__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__appliesToTask__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this field if you want to designate the current action as one of the default actions that can be accessed and assigned when you add a task supporting information record to a task.</inlineHelpText>
    <label>Applies to Task</label>
    <type>Checkbox</type>
</CustomField>