force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__autoModify__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__autoModify__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if you want to modify the Description field whenever you assign the current action to an incident, broadcast, task, or configuration item.</inlineHelpText>
    <label>Enable Edit</label>
    <type>Checkbox</type>
</CustomField>