force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__HideDuration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__HideDuration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to hide the Duration field on the Action form</description>
    <inlineHelpText>Select to hide the Duration field on the Action form</inlineHelpText>
    <label>Hide Duration</label>
    <type>Checkbox</type>
</CustomField>