force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__inactive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>States whether this object is Inactive or active</description>
    <inlineHelpText>Select this field if the action record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>