force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__instruction__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__instruction__c</fullName>
    <label>Instruction</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>