force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__note__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__note__c</fullName>
    <description>Note Regarding Object</description>
    <inlineHelpText>Note Regarding Object</inlineHelpText>
    <label>Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>