force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__picture__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__picture__c</fullName>
    <label>Picture</label>
    <type>TextArea</type>
</CustomField>