force-app/main/default/objects/BMCServiceDesk__Action__c/fields/BMCServiceDesk__trackTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__trackTime__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if you want to track and record the amount of time it takes to complete the current action. The time is recorded in the Duration column of the supporting information record assigned to the current action.</inlineHelpText>
    <label>Track Time</label>
    <type>Checkbox</type>
</CustomField>