force-app/main/default/objects/BMCServiceDesk__Action__c/validationRules/BMCServiceDesk__Action_required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Action_required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(Name ) , ISBLANK(Name))</errorConditionFormula>
    <errorMessage>Please enter value in Action field.</errorMessage>
</ValidationRule>