force-app/main/default/objects/BMCServiceDesk__Action__c/validationRules/BMCServiceDesk__UniqueActionIDCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__UniqueActionIDCheck</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__Action__c.Fields.Name , $ObjectType.BMCServiceDesk__Action__c.Fields.Name,NULLVALUE(Name, Name)))),
IF(ISCHANGED(Name),
IF((LOWER(Name) = LOWER(VLOOKUP($ObjectType.BMCServiceDesk__Action__c.Fields.Name , $ObjectType.BMCServiceDesk__Action__c.Fields.Name,Name))&amp;&amp;LOWER(PRIORVALUE(Name)) != Lower(Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
    <errorMessage>An action record with this Action already exists. Enter a unique Action.</errorMessage>
</ValidationRule>