force-app/main/default/objects/BMCServiceDesk__Action__c/listViews/BMCServiceDesk__Test.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__Test</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Test</label>
</ListView>